<resources>
    <string name="app_name" translatable="false">Money Manager</string>

    <string name="app_description">\"Money Manager\" is an app developed by \"XYZER Studios\" that helps
        people keep track of their expenses and income in a clear and concise way. Budgets, balance sheets,
        portfolios, as well as different categories can be used to make one\'s finances as transparent as possible.</string>
    .

    <string name="press_again_to_exit">Press again to exit the app.</string>

    <string name="name">Name</string>.

    <string name="menu_heading_general">General</string>.
    <string name="menu_title_dashboard">Dashboard</string>
    <string name="menu_title_portfolios">Portfolios</string>
    <string name="menu_title_bilanzen">Balance Sheets</string>
    <string name="menu_heading_actions">Actions</string>
    <string name="menu_title_premium">Premium</string>
    <string name="menu_title_donate">Donate</string>
    <string name="menu_heading_other">Other</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_about_us">About</string>
    <string name="menu_title_budgets">Budgets</string>
    <string name="menu_title_your_data">Your Data</string>
    <string name="menu_title_statistics">Statistics</string>

    <string name="add_balance">Add Balance Sheet</string>
    <string name="add_portfolio">Add Portfolio</string>
    <string name="edit_portfolio">Edit Portfolio</string>

    <string name="income">Income</string>
    <string name="expenses">Expenses</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>

    <string name="choose_category">Choose Category</string>

    <string name="date">Date</string>
    <string name="payment_method">Payment Method</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>

    <string name="add">add</string>
    <string name="saldo">Balance</string>
    <string name="description">Description</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="only_letters_numbers">Please only enter letters and numbers</string>
    <string name="delete_confirmation">Are you sure that you want to delete this entry?</string>
    <string name="cannot_be_deleted">This entry cannot be deleted</string>

    <string name="category_food">Food</string>
    <string name="category_car">Car</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_clothing">Clothing</string>
    <string name="category_telephone">Cellphone</string>
    <string name="category_gift">Gift</string>
    <string name="category_social">Social</string>
    <string name="category_other">Other</string>
    <string name="category_alcohol">Alcohol</string>
    <string name="category_sports">Sports</string>
    <string name="category_books">Books</string>
    <string name="category_office">Office</string>
    <string name="category_education">Education</string>
    <string name="category_travel">Travel</string>
    <string name="category_snacks">Snacks</string>
    <string name="category_vegetables">Vegetables</string>
    <string name="category_electronics">Electronics</string>
    <string name="category_pet">Pets</string>
    <string name="category_baby">Baby</string>
    <string name="category_health">Health</string>
    <string name="category_smoking">Smoking</string>
    <string name="category_insurance">Insurance</string>
    <string name="category_transportation">Transportation</string>
    <string name="category_home">Home</string>
    <string name="category_rent">Rent</string>

    <string name="category_wage">Wage</string>
    <string name="category_prize">Prize</string>
    <string name="category_grant">Grant</string>
    <string name="category_sales">Sales</string>
    <string name="category_renting">Renting</string>
    <string name="category_voucher">Voucher</string>
    <string name="category_refund">Refund</string>
    <string name="category_lottery">Lottery</string>
    <string name="category_bonus">Bonus</string>
    <string name="category_dividend">Dividend</string>
    <string name="category_investment">Investment</string>
    <string name="amount">Amount</string>

    <string name="time_stamp">Timestamp</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="delete">delete</string>

    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="week">Week</string>
    <string name="weeks">Weeks</string>
    <string name="month">Month</string>
    <string name="months">Months</string>
    <string name="year">Year</string>
    <string name="years">Years</string>

    <string name="choose_month_and_year">Choose Month and Year</string>
    <string name="choose_payment_method">Choose Payment Method</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="credit_card">Credit Card</string>
    <string name="ec_card">EC-Card</string>
    <string name="cash">Cash</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="online_payment">Online Payment</string>

    <string name="remove_filter">Remove Filter</string>
    <string name="add_category">Add Category</string>
    <string name="color">Color</string>
    <string name="choose_color">Choose a color</string>
    <string name="category_needs_to_be_unique">Your category must be unique</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_income">Edit Income</string>

    <string name="amount_left">Left</string>
    <string name="amount_exceeded">Exceeded</string>
    <string name="amount_limit">Limit</string>
    <string name="amount_spent">Spent</string>

    <string name="add_budget">Add Budget</string>
    <string name="cant_add_two_budgets_same_cat">You can only define one budget per category</string>
    <string name="edit_budget">Edit Budget</string>
    <string name="portfolio">Portfolio</string>
    <string name="edit_balance">Edit Balance Sheet</string>
    <string name="add_amount">Add Amount</string>
    <string name="repeated_income">Repeated Income</string> <!-- Wiederkehrende Einnahme -->
    <string name="repeated_income_not_available">\"Repeated Income\" is only available with newer versions of Android</string>
    <string name="repeated">Repeated</string>
    <string name="interval">Interval</string>
    <string name="available_amount">Available Amount</string>
    <string name="sum_budgets">Sum of all budgets</string>

    <string name="select">Select</string>
    <string name="apply">Apply</string>

    <string name="budgets_explanation">With \"Budgets\" you can budget super easily. Choose a category
        and a monthly limit. As soon as you exceed this amount, the budget turns red. Under
        \"available amount\" you can see your average budget per month. This only includes regular income. </string>
    <string name="portfolios_explanation">With \"Portfolios\" you can separate turnovers from each other.
        With several portfolios, you can easily keep track of spendings of different types.</string>
    <string name="settings">Settings</string>
    <string name="settings_currency">Currency</string>
    <string name="display_currency_with_unicode">Show currency with its symbol</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="convert_currency">Convert Currency</string>
    <string name="convert">Convert</string>
    <string name="convert_from">From</string>
    <string name="convert_to">To</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="text_donate">It took me a lot of time and effort to develop this app.
        If you would like to support me financially, you are welcome to donate a small amount via PayPal :).</string>
    <string name="paypal_donate">Donate with PayPal</string>
    <string name="consent_rewarded_ad">To add a new portfolio, you need to watch a rewarded video ad.</string>
    <string name="show_ad">Show Ad</string>
    <string name="show_all">Show All</string>
    <string name="revenue">Revenues</string>
    <string name="add_revenue">Add Revenue</string>
    <string name="ad_is_loading">Ad is currently loading</string>
    <string name="how_app_handle_data">How does this App handle your data?</string>
    <string name="data_handle_description">In a world where companies try to squeeze every
        penny out of your data, you may be surprised that your data never leaves this app.
        Everything is stored internally on your phone using SQLite databases. This is the
        reason why you cannot synchronize your data with other devices.</string>
    <string name="notify_regularaly">Enable daily notification</string>
    <string name="notification_time">Notification time</string>
    <string name="notification_text">Don\'t forget to enter your income and expenses for today.</string>
    <string name="onboarding_text">Tutorial</string>

    <string name="default_button_label" translatable="false">OK</string>
    <string name="statistics_explanation">\"Statistics\" will show you a graph that compares your
        income with your expenses in a given time. This helps you see your monthly balance over a larger time frame.</string>
    <string name="balance_explanation">A balance takes all your turnovers and expenses to calculate the total balance and show whether you made profit or loss.</string>
    <string name="ok">Ok</string>

    <string-array name="interval_units">
        <item>@string/days</item>
        <item>@string/weeks</item>
        <item>@string/months</item>
        <item>@string/years</item>
    </string-array>

</resources>