<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ui_toolbar"
        android:elevation="1dp">

        <ImageButton
            android:id="@+id/buttonSettingsGoBack"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="left"
            android:backgroundTint="@color/transparent_white"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/ui_black" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ui_light_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ui_light_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="11dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="1dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:paddingTop="4dp"
                        android:text="@string/settings"
                        android:textColor="@color/ui_text_high_contrast"
                        android:textSize="28dp" />


                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />


                <LinearLayout
                    android:id="@+id/chooserSettingsCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="9dp"
                    android:paddingBottom="6dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/settings_currency"
                        android:textColor="@color/ui_text"
                        android:textSize="16dp" />

                    <Space
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textViewSettingsCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="EUR"
                        android:textColor="@color/ui_text"
                        android:textSize="16dp" />

                </LinearLayout>


                <Switch
                    android:id="@+id/switchDisplayCurWU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="9dp"
                    android:paddingBottom="6dp"
                    android:paddingLeft="5dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:checked="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/display_currency_with_unicode"
                    android:textColor="@color/ui_text"
                    android:textSize="16dp" />

                <Switch
                    android:id="@+id/switchEnableNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="9dp"
                    android:paddingBottom="6dp"
                    android:paddingLeft="5dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:checked="false"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/notify_regularaly"
                    android:textColor="@color/ui_text"
                    android:textSize="16dp" />

                <LinearLayout
                    android:id="@+id/chooserNotificationTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="9dp"
                    android:paddingBottom="6dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:visibility="invisible"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/notification_time"
                        android:textColor="@color/ui_text"
                        android:textSize="16dp" />

                    <Space
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textViewSettingsNotificationTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="--:--"
                        android:textColor="@color/ui_text"
                        android:textSize="16dp" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>