<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_dialog_background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="100dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/explanationInformationDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:fontFamily="@font/poppins_regular"
                android:paddingTop="4dp"
                android:text="@string/consent_rewarded_ad"
                android:textColor="@color/ui_text_faded"
                android:textSize="18dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/buttonPlayReward"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_donate_paypal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/ic_play"
                        app:tint="#012069" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/show_ad"
                        android:textAlignment="center"
                        android:textColor="#012069"
                        android:textSize="16dp" />

                </LinearLayout>

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/buttonCancelAd"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/light_button"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/cancel"
                        android:textAlignment="center"
                        android:textColor="@color/ui_text_strongly_faded"
                        android:textSize="16dp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>

</LinearLayout>